Созданы таблицы базы данных

--- a/Kyky pizza/Kyky pizza.csproj
+++ b/Kyky pizza/Kyky pizza.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Core\" />
+      <Folder Include="Core\ViewModels\" />
     </ItemGroup>
 
 </Project>
